src/styles.css
@font-face {
  font-family: 'Mono';
  src: url('./assets/fonts/InputMono-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

*, *:before, *:after {
  box-sizing: inherit;
}

html {
  background-color: #222;
  box-sizing: border-box;
}

body {
  font-family: 'Mono';
  font-size: 12px;
  color: #eee;
  margin: 0px;
  background-color: #222;
}

p {
  margin: 5px 0px;
}

button {
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  background: none;
  border: none;
  outline: none;
  cursor: pointer;
}

button:hover, button:active {
  text-decoration: underline;
}

table {
  margin-top: 10px;
}

svg {
  pointer-events: none;
}

th {
  text-align: left;
  border-bottom: 1px solid #888;
}

td {
  vertical-align: center;
}

td button {
  display: flex;
}

input[type=text] {
  font-family: inherit;
  font-size: inherit;
  background-color: #222;
  color: #eee;
  border: none;
}

input[type=text]:focus {
  background-color: #222;
  border: none;
  outline: none;
}

input[type=radio] {
  padding: 0;
  margin: 0;
  margin-right: 2px;
}

input[type=file] {
  font-family: inherit;
  font-size: inherit;
  color: #eee;
}

input[type=file] button {
  font-family: inherit;
  font-size: inherit;
  color: #eee;
}

#first {
  border: 0px;
}

.root {
  display: flex;
  flex-direction: column;
  background-color: #222;
  height: 100vh;
  width: 100vw;
}

.drag {
  -webkit-app-region: drag;
  width: 100%;
  height: 25px;
}

.header {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 5px;
  padding-left: 5px;
}

.header .header-right {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: auto;
}

.header button {
  margin-right: 5px;
}

.header .enabled svg {
  stroke: #eee;
}

.header .disabled svg {
  stroke: #888;
}

.main {
  display: flex;
  flex-direction: row;
  flex: 1;
  overflow: hidden;
}

.nav {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 120px;
  padding-left: 5px;
  padding-top: 5px;
  color: #888;
}

.nav button {
  margin-bottom: 5px;
}

.nav .selected {
  color: #eee;
}

.vertical-line {
  border-left: 2px solid #888;
  height: 100%;
}

.content {
  position: relative;
  width: 100%;
  overflow-y: auto;
  margin-bottom: 50px;
  padding-left: 5px;
  padding-right: 10px;
}

.player {
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  height: 50px;
  background-color: #222;
}

.player button {
  display: flex;
  width: 30px;
  margin-left: 10px;
}

.player .title-and-artist {
  margin: 0px;
  border: 1px solid yellow;
}

/* album element */
.album {
  display: flex;
  flex-direction: column;
  margin-bottom: 5px;
}

.album .main {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  cursor: pointer;
}

.album .actions {
  font-size: 10px;
  color: #888;
  margin-left: 25px;
}

.album .actions button {
  padding: 0px;
  margin-right: 10px;
}

.album .main .artist {
  width: auto;
  padding: 0px;
}

.album .main .titleAndArtist {
  display: flex;
  flex-direction: row;
  align-content: flex-start;
}

.album .main .tag {
  display: flex;
  align-items: center;
  font-size: 10px;
  color: #888;
  margin-left: auto;
  margin-right: 5px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.album .main button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
}

.album .main .album-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
}

.albumView .description {
  color: #888;
  margin-top: 10px;
  margin-bottom: 20px;
  margin-left: 25px;
  font-size: 11px;
}

.albumView .song {
  margin-left: 18px;
}

/* song element */
.song {
  display: flex;
  flex-direction: column;
  margin-bottom: 5px;
}

.song .main {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  cursor: pointer;
}

.song .main .artist {
  width: auto;
  padding: 0px;
}

.song .main .titleAndArtist {
  display: flex;
  flex-direction: row;
  align-content: flex-start;
}

.song .main .tag {
  display: flex;
  align-items: center;
  font-size: 10px;
  color: #888;
  margin-left: auto;
  margin-right: 5px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.song .main button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
}

.separator {
  margin-left: 5px;
  margin-right: 5px;
}

.song .actions {
  font-size: 10px;
  color: #888;
  margin-left: 25px;
}

.song .actions button {
  padding: 0px;
  margin-right: 10px;
}

.song-view-main {
  color: #888;
  margin-left: 8px;
}

.song-view-main .comment-container {
  display: flex;
  align-items: center;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #222;
  width: 100%;
}

.comment-container .marker {
  color: #eee;
  margin-left: 13px;
}

.comment-container textarea {
  border: none;
  background-color: #222;
  color: #eee;
  flex: 1;
  margin-left: 5px;
  margin-right: 5px;
  resize: none;
}

.comment-container textarea:focus {
  outline: none;
}

.comment-container button {
  color: #eee;
}

.comment {
  margin: 5px 0;
}

.song-view-main button {
  padding: 0px;
  margin-right: 10px;
}

.song-view-main .selected {
  text-decoration: underline;
  color: #eee;
}

.file input[type=checkbox] {
  cursor: pointer;
}

.artist .bio {
  color: #888;
  margin-bottom: 20px;
  font-size: 11px;
}

.artist .location-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.artist .location-div svg {
  margin-right: 5px;
}

.artist .location-div p {
  margin: 0px;
}

.comments {
  margin-top: 10px;
}

.comments p {
  color: #eee;
  margin: 0;
}

/*UploadView*/
.upload-song {
  padding: 5px;
  margin-bottom: 10px;
}

.upload-song button {
  padding: 0;
  margin-top: 10px;
  margin-right: 10px;
  font-size: 11px;
}

.upload-file {
  padding: 5px;
  margin: 10px 5px;
}

.upload-description {
  display: flex;
  flex-direction: column;
}

.album-textarea {
  border: 2px groove #bbb;
  background-color: #222;
  color: #eee;
  margin: 0 2px;
  margin-top: 5px;
  margin-bottom: 10px;
  resize: vertical;
}
.album-textarea:disabled {
  background-color: #333;
}

.album-textarea:focus {
  outline: none;
}

.label-disabled {
  color: #888;
}

.radio-group-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.radio-div {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0 5px;
}

